tests/sources/invalid/arrays/array_literal_unresolvable_element.fire
// An array literal whose first element is an undefined identifier: its
// type can't be determined, so the whole array literal's type check
// bails out rather than trying to infer from a bad element.
int32 main() {
    int32[] arr = [undef, 2];  //~ ERROR FS-PARSE-0003 @20
    return 0;
}
